Changes since version 1.1
--------------------------------------

New Features
============

o added DragCapture. DragCapture implements a pointer capture logic. It is now used
  in DragValue, Drag and ResponseHandler. It automatically supports multi touch.

o Iconset as font

o Drag supports CSS transformations if option "transform" is set to true.

Improvements
============

o DragValue: The 'blind_angle' option now applies to all choices of the 'direction'
  option.

o ResponseHandle: has real MultiTouch support. This also applies to the z_handling
  gesture, which means that any number of touch points can now drag handles in the
  EQ.

o ValueButton has a marker to display backend values

o Button/Toggle: set URL or class name for icon

o Faders with markers (tiny triangles) and bars to visualize different other
  values, e.g. backend values or a level meter. Additionally Faders got
  title and value ChildWidgets.
  
o Window: complete rewrite. Less DOM nodes, less complexity, using new
  toolkit APIs. Additionally layout switched from table-like div zoo to
  more slick flexbox.

API Changes
===========

o The return value of event handlers is processed differently now.
  Any return value which is not undefined will interrupt the execution of
  any other handlers. fire_event will return that value.
  This change was necessary because some DOM events use values !== false for
  cancellation. It also makes more complex signalling logic possible for events.
  This is used by the new DragCapture class.
  
o Circular elements switched the option for the opening angle from "basis"
  to "angle". This is to separate the distance to drag on Knob and ValueKnob
  from the angle.
  
o Window: All sub elements are real widgets now using the new ChildWidget API.
  There's only header and footer element left, header_left, header_center, header_right,
  footer_left, footer_center and footer_right are removed.